--- a/registration/src/components/style.css
+++ b/registration/src/components/style.css
@@ -1,207 +1,73 @@
-  
- .row>* {
-  padding-right: 0;
-  padding-left: 0;
- }
- .fold_1{
-  background-color: #053d4f;
- }
- .navbar{
-     background-color: #053d4f;;
-  }
-  .headertop_info{
-    background-color: #053d4f;
-
-  }
-  .headertop_info h2{
-    color: #fff;
+.container-fluid{
+  padding: 0;
+}
  
-    font-size: 15px;
-    font-weight: 600;
-    font-family: 'Libre Franklin', sans-serif;
-    position: relative;
-    display: inline-block;
-    line-height: 20px;
-    padding: 0 10px 0 200px;
-    text-align: center;
-  }
-  .logo{
-    margin: 14px 0 0 40px;
-    width: 50%;
+.header h1{
+       font-size: 10px!important;
+       text-align: center;
+}
+.home img{
+  width: 100%;
+  padding-top: 15px;
+}
+.home h1{
+  text-align: center;
+  margin: 20px 20px 20px 20px;
+}
+ .home p{
+  line-height: 3;
+ }
+.home-content{
+  margin-top: 50px;
+}
 
-  }
+
+
+
+
+
+
+
+
+
+.slider .container-fluid{
+  padding: 0;
+  overflow: hidden;
+}
+.logo{
+  width: 50%;
+}
 .design-ul{
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-top: 18px;
-    
+  justify-content: flex-end;
+  
 }
 .design-li{
- margin-right: 20px; 
- margin-top: 20px;
- font-weight: 500;
+  margin-right: 10px;
 }
-.design-li:hover{
-   color: #02d8a1;
-}
-.logo-content{
-  font-size: 15px;
-  margin-top: 38px;
-  
-  margin-left: 88px!important;
-}
-  
-.logo-content:hover{
-  color: #02d8a1;
-
-
-}
- .pict{
-  position:relative;
-
-  width: 100%;
-  margin-top: 11px;
- }
- .pict_content h1{
-  position: absolute;
-  bottom: 8px;
-  margin: 0 0 0 142px;
-  font-weight: 700;
- }
- .h_title{
-  font-size: 45px;
-  
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 900;
-  color: #02d8a1;
-  
- 
- }
- .h_title.tit{
-  text-align: center;
- }
- .h_title.tit
- .h_title span{
-  font-size: 30px;
-  font-weight: normal;
-  display: block;
-  font-family: 'Libre Baskerville', serif;
-  color:#02d8a1;
-  margin: 0 0 -1px 3px;
- }
- .h_title small{
-  color: #053d4f;
-  margin-left: 20px;
- }
- .photo1{
-  width: 100%;
-  margin-bottom: 10px;
- 
-   
-  border-radius: 0 286px 286px 2px;
- 
- }
- .fold-1{
-  margin-top: 50px;
- }
- .para{
-  line-height: 3;
-  margin-left: 15px;
- }
- .fp3{
-  color: #000;
-  max-width: 830px;
-  margin: 0 auto 33px auto;
-  width: 100%;
-  line-height: 41px;
-  text-align: center;
-  font-size: 15px;
- }
- .fold-3 span{
-  color: #053d4f;
- }
- .fold-3 span:hover{
-  color: #02d8a1;
- }
-  
- .pict_content span,small{
- font-size: 20px;
- }
- .pict_content p{
-  font-size: 20px;
- }   
-
-.img-responsive{
-      width: 20%;
-}
-.fold_4{
-  padding: 3px 0 39px 127px;
-  
-  margin-left: 65px;
-}
- 
- 
 .btn{
-  background-color: #053d4f;
+  background-color: #060316;
   color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  margin-left: 10px;
-
-}
-.icon1{
-  margin-left: 10px;
-}
-.heading_h1{
-  font-size: 20px;
-  margin-top: 10px;
+  font-weight: 500;
 }
 .btn:hover{
-  background-color:#02d8a1;
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-}
- .map iframe{
-  width: 70%;
-  margin-left: 50px;
-  height: 300px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  background-color: #fff;
+  color:#060316; 
+  border: 1px solid #060316;
+  
 
- }
- .design-li.lm:hover{
-  color: #000;
-  
- }
- .fold-5{
-  margin-top: 20px;
-  
- }
- .icon_map{
-  margin-right: 20px;
-  margin-top: 10px;
-  
- }
- .design_map span{
-  margin-left: 65px;
- }
- .footer_content{
-  background-color: #053d4f;
-  color: #fff;
- }
- .design-ul.foot{
-  margin-left: 60px;
-  text-align: center;
- }
- .logo.footer{
-  width: 50%;
-  margin-bottom: 50px;
-  padding: 20px;
-   
- }
- .footer{
-  margin-top: 80px;
- }
- 
+}
+.btn:before {
+  border-color: #c47135;
+  border-left-width: 2px;
+  border-top-width: 2px;
+  left: -5px;
+  top: -5px;}
+
+  .btn:after {
+    border-bottom-width: 2px;
+    border-color: #c47135;
+    border-right-width: 2px;
+    bottom: -5px;
+    right: -5px;
+}
