--- a/registration/src/components/style.css
+++ b/registration/src/components/style.css
@@ -8,7 +8,7 @@
 }
 .home img{
   width: 100%;
-  padding-top: 15px;
+  padding-top: 20px;
 }
 .home h1{
   text-align: center;
@@ -28,7 +28,9 @@
 
 
 
-
+.slider img{
+  width: 100%;
+}
 
 .slider .container-fluid{
   padding: 0;
