--- a/registration/src/components/CSS/home.scss
+++ b/registration/src/components/CSS/home.scss
@@ -37,7 +37,7 @@
       .img2 {
         position: absolute;
         top: 0;
-        width: 100%;
+        width: 637px;
         left: 0;
         display: block;
         margin: 0px auto;
