--- a/registration/src/components/CSS/all.scss
+++ b/registration/src/components/CSS/all.scss
@@ -1,5 +1,6 @@
-@import '../CSS/header.scss';
-@import '../CSS/home.scss';
-@import '../CSS/footer.scss';
-@import '../CSS/admin.scss';
+@import '../CSS/header';
+@import '../CSS/home';
+@import '../CSS/footer';
+@import '../CSS/admin';
+@import '../CSS/dashboard.scss';
  
