--- a/registration/src/components/CSS/header.scss
+++ b/registration/src/components/CSS/header.scss
@@ -39,7 +39,8 @@
         margin:0px 0;
         font-size: 15px;
         padding:10px 15px;
-        color:#fff;cursor: pointer; 
+        color:#fff;
+        cursor: pointer; 
         font-weight: 500;
         a { font-size:15px;  
           color:#222; 
