--- a/registration/src/components/CSS/home.scss
+++ b/registration/src/components/CSS/home.scss
@@ -8,7 +8,7 @@
   &.slider-in{
     padding: 100px 0;
     text-align: center;
-    H1 {
+    h1 {
       color: #FFF;
     }
   }
@@ -141,9 +141,7 @@
     height: 55px;
     line-height: 55px;
     transition:ease all 0.3s; 
-    &:hover { 
-       
-    }
+     
   }
 }
  
@@ -268,9 +266,7 @@
         display: block;
         padding: 0 10px;
       }
-      a {
-
-      }
+     
     }
   }
 }
@@ -281,230 +277,6 @@
     font-size: 40px;
   }
  }
-
-   
-   
-  
-  
-  
-  
-  
-  
-  
-  
-  .slider .slide .img1{
-    width: 100%;
-      opacity: .6;
-    height: 474px;
-   }
-   
- 
-  .slider .container-fluid{
-    padding: 0;
-    overflow: hidden;
-  }
-  .logo{
-    width: 50%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .design-ul{
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 24px;
-    
-  }
-  .design-li{
-    margin-right: 10px;
-  }
-  .btn{
-    
-     background-color: #8766ff;
-      border-style: solid;
-      border-width: 2px 2px 2px 2px;
-      border-color: #677fc400;
-      border-radius: 5px 5px 5px 5px;
-      padding: 16px 48px 16px 48px;
-      color: #fff;
-    font-weight: 500;
-    margin-top: 70px;
-  }
-  .btn:hover{
-    color:  #8766ff;
-      background-color:#fff;
-      border-color:   #8766ff;
-   
-  }
-  .center-excellence {
-    padding: 60px 0;
-    background: #F7F8FF;
-  }
-  .text-center {
-    text-align: center !important;
-  }
-  .pb-3 {
-    padding-bottom: 1rem !important;
-  }
-  .centerofexcellence-slider {
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
-  .centerofexcellence-slider {
-    padding: 0px 50px;
-    /* position: relative;} */}
-  
-    .slick-slider {
-      position: relative;
-      display: block;
-      box-sizing: border-box;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      -webkit-touch-callout: none;
-      -khtml-user-select: none;
-      -ms-touch-action: pan-y;
-      touch-action: pan-y;
-      -webkit-tap-highlight-color: transparent;
-  }
-  .arrowsldier .slick-prev {
-    position: absolute;
-    bottom: 50%;
-    margin: 0px 0 -18px 0;
-    left: 6px;
-    z-index: 2;}
-    .arrowsldier .slick-prev, .arrowsldier .slick-next {
-      width: 40px;
-      height: 40px;
-      background: none;
-      border-radius: 50%;
-      border: 1px solid  #2149b8;
-      font-size: 0;
-      line-height: 68px;
-      text-align: center;
-  }.arrowsldier .slick-prev:before {
-    content: "\e605";
-    font-size: 20px;
-    font-family: 'simple-line-icons';
-    color:  #2149b8;
-    position: absolute;
-    left: 10px;
-    top: -15px;
-  }
-  .slick-slider .slick-track, .slick-slider .slick-list {
-     
-    transform: translate3d(0,0,0);
-  }
-  .slick-list {
-    position: relative;
-    display: block;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-  }
-  .slick-track{
-     opacity: 1;
-    width: 7800px;
-    transform: translate3d(-3900px, 0px, 0px);
-  }
-  /* centre of main excellence */
-  .centerofexcellence{padding: 0px 100px;}
-   .ce-item {padding: 10px;  text-align: center; margin: 0 10px;}
-   .ce-item .image{width: 134px; margin: 0px auto; height: 87px;}
-   .ce-item h4 {font-size: 18px;  text-align: center; color:black; padding: 10px 0 0 0; }
-    
-  .centerofexcellence .center-btn {border: 1px solid #fff; color:#fff;}
-      
-  .sleeter-a {
-    position: relative;
-    background-size:cover;
-    height: 100%;
-  }
-  .sleeter-a .overlay-mask {
-    background: #000;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.7;
-  }
-  .event, .media, .awards-and-accrediation {
-    box-shadow: 0 0 10PX #aaa;
-    padding: 40px;
-    position: relative; height:100%;
-    
-  }
-  /* .event, .media, .awards-and-accrediation:hover{
-   
-   box-shadow: #000;
-  }  */
-  .our-meet h3{
-    color: #2149b8;
-  }
-  
-  /*added*/
-  /* .centerofexcellence {padding: 75px 0;} */
-  .center-excellence {padding:  60px 0; background:  #F7F8FF;}
-  .view-wrap {display: flex; align-items: center; justify-content: center;}
-  .view-wrap a {
-     
-      margin: 25px 0 0 0;
-      clear: both;
-  }
-  .view-wrap a:hover {
-    text-decoration: underline;
-  }
-  
-  .centerofexcellence-slider {padding: 0px 50px; position:relative; }
-  .centerofexcellence-slider .ce-item { border:2px dashed #dadada; position:relative;   padding:10px 30px; border-radius:10px; margin:10px; min-height:180px; transition:ease all 0.3s; }
-  .centerofexcellence-slider .ce-item:hover { box-shadow:0 0 10px #dadada; border:2px dashed #2149b8;}
-   
-  .centerofexcellence-slider .ce-item .img-wrap {  width:90px;  height:90px;  margin:10px auto 0px; } 
-  .centerofexcellence-slider .ce-item .img-wrap img { width:100%; }
-  .centerofexcellence-slider .ce-item  h4  { font-size:15px; font-weight:400; }
-   .global { position:relative;}
-   .ce-item text{
-      position: relative;
-   }
-  
-  .centerofexcellence-slider { position:relative; }
-   .arrowsldier .slick-dots { display:none !important; }
-  .arrowsldier .slick-prev, .arrowsldier .slick-next {width:40px;height:40px;background:none;border-radius:50%;border:1px solid  #2149b8;font-size:0;line-height:68px;text-align:center; }
-  .arrowsldier .slick-prev { position:absolute; bottom:50%; margin:0px 0 -18px 0; left:6px; z-index:2; }
-  .arrowsldier .slick-next { position:absolute; bottom:50%; margin:0px 0 -18px 0; right:0px; z-index:2;   }
-  .arrowsldier .slick-prev:before { content:"\e605"; font-size:20px; font-family: 'simple-line-icons'; color: #2149b8 ; position: absolute;
-    left: 10px;
-    top: -15px; }
-  .arrowsldier .slick-next:before { content:"\e606"; font-size:20px; font-family: 'simple-line-icons'; color: #2149b8 ;  position: absolute;
-    left: 10px;
-    top: -15px;}
-    
-    
-   
-    
-  .centerofexcellence .center-btn {border: 1px solid  #2149b8; color:#fff;} 
-
-.button2 { 
-  background: linear-gradient(180deg, #fff 0%, #fafafa 100%); 
-  border-radius:5px; 
-  border:0; 
-  line-height:50px; 
-  height:50px; 
-  padding:0px 40px; 
-  color:#000; 
-  box-shadow:0px 0px 20px rgb(0 0 0 / 5%); 
-  font-size:16px; 
-  font-weight:normal; 
-  display:inline-block; 
-  &:hover { 
-    background:#555; 
-    color:#ffff; 
-  }
-}
-
-
 .button1 { 
   background: #d41919; 
   border-radius:5px; 
