--- a/registration/src/components/CSS/dashboard.scss
+++ b/registration/src/components/CSS/dashboard.scss
@@ -1,7 +1,8 @@
 .dashboard{
-    background: url(../images/banner-bg.jpeg);
-   width: 20%;
-   height: 100vh;
+    background: url(../images/1.jpg);
+    width: 20%;
+    height: 100vh;
+    background-size: cover;
    .dash{
     padding: 30px 30px 0 30px;
     position: relative;
