--- a/registration/src/components/CSS/all.scss
+++ b/registration/src/components/CSS/all.scss
@@ -2,5 +2,5 @@
 @import '../CSS/home';
 @import '../CSS/footer';
 @import '../CSS/admin';
-@import '../CSS/dashboard.scss';
+@import '../CSS/dashboard';
  
