--- a/registration/src/components/CSS/dashboard.scss
+++ b/registration/src/components/CSS/dashboard.scss
@@ -1,102 +1,75 @@
-<<<<<<< HEAD
 .dashpage{
     overflow: hidden;
     .dashboard{
-        background: url(../images/banner-bg.jpeg);
-       width: 70%;
-       height: 100vh;
-       overflow: hidden;
-     
-       .dash{
-        padding: 30px 30px 0 30px;
-        position: relative;
+        background: url(../images/1.jpg);
         
-        img{
-            width: 100%;
-        }
-       }
-       .dash_content {
-=======
-.dashboard{
-    background: url(../images/1.jpg);
-    width: 20%;
-    height: 100vh;
-    background-size: cover;
-   .dash{
-    padding: 30px 30px 0 30px;
-    position: relative;
-    img{
->>>>>>> 2e41f0fa70a350a28fa4edb3b17eba9cfad8854f
-        width: 100%;
-        z-index: 1;
-        position: relative;
-        padding: 15px;
+        width: 70%;
+        height: 100vh;
+        background-size: cover;
         color: #fff;
-        .widget-menu {
-            -webkit-border-radius: 3px;
-            -moz-border-radius: 3px;
-            border-radius: 3px;
-            overflow: hidden;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-             li {
-                border-bottom: 1px solid rgba(255,255,255,0.4);
-                color: #fff;
-                padding: 15px;
+        .dash{
+            padding: 14px;
+            img{
+                width: 100%;
             }
-            ul {
+        }
+        .dash_content{
+            ul{
+                border-radius: 3px;
+                overflow: hidden;
                 list-style: none;
-                padding: 0;
                 margin: 0;
+                padding: 10px;
             }
+            li{
+                border-bottom: 1px solid rgba(255,255,255,0.4);
+                margin-top: 10px;
+                margin-bottom: 10px;
+                padding: 10px;
             .fa{
                 margin-right: 10px;
                 color: #fff;
-                -webkit-transition: all .2s ease-in-out;
-                -moz-transition: all .2s ease-in-out;
-                transition: all .2s ease-in-out;
-                .fa-chevron-down:before {
-                    content: "\f078";
-                }
-            }
-            .menu-toggle {
-                font-size: 13px;
-                font-weight: bold;
-                .fa {
-                    margin-left: 10px;
-                    margin-right: 0px;
-                    float: right;
-                    margin-top: 3px;
-                }
-            }
-            
-           
+             }}
         }
+         }
+         .head{
+            .headernew{
+                background: #fff;
+             
+            
+            color: #000000;
+            width: 100%;
+            height: 60px;
+             
+            -moz-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            padding: 5px 0px;
+            z-index: 11;
+            overflow: hidden;
+            .cont{
+                margin-top: 20px;
+            }
+            .faa{
+            
+                            margin-right: 30px;
+                            float: left;
+                            margin-top: 3px; 
+            }
+            }
+            .white-box{
+                background: #fff;
+                padding: 20px;
+                box-shadow: 0 0 10px #dadada;
+                border: 1px solid #e4e6f6;
+                border-radius: 0px;
+                margin: 0 0 30px 0;
+                display: inline-block;
+                width: 100%;
+                margin-top: 20px;
+            } 
+         }
     
-    }
-    
-    }
-
-    .headernew{
-        background: #fff;
-     
-   
-    color: #000000;
-    width: 100%;
-    height: 60px;
-     
-    -moz-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
-    position: sticky;
-    top: 0;
-    padding: 5px 0px;
-    z-index: 11;
-    .faa{
-   
-                    margin-right: 30px;
-                    float: left;
-                    margin-top: 3px; 
-    }
-    }
 }
+      
