--- a/registration/src/components/CSS/dashboard.scss
+++ b/registration/src/components/CSS/dashboard.scss
@@ -3,7 +3,7 @@
     .dashboard{
         background: url(../images/1.jpg);
         
-        width: 70%;
+        width: 100%;
         height: 100vh;
         background-size: cover;
         color: #fff;
@@ -56,6 +56,7 @@
                             margin-right: 30px;
                             float: left;
                             margin-top: 3px; 
+                            margin-left: 30px;
             }
             }
             .white-box{
@@ -66,7 +67,7 @@
                 border-radius: 0px;
                 margin: 0 0 30px 0;
                 display: inline-block;
-                width: 100%;
+                width: 90%;
                 margin-top: 20px;
             } 
          }
