--- a/registration/src/components/CSS/dashboard.scss
+++ b/registration/src/components/CSS/dashboard.scss
@@ -1,137 +1,85 @@
-// .dashpage{
-//     overflow: hidden;
-//     .dashboard{
-//         background: url(../images/1.jpg);
+.dashpage{
+    overflow: hidden;
+    padding: 0;
+    .dashboard{
+        background: url(../images/1.jpg);
         
-//         width: 100%;
-//         height: 100vh;
-//         background-size: cover;
-//         color: #fff;
-//         .dash{
-//             padding: 14px;
-//             img{
-//                 width: 100%;
-//             }
-//         }
-//         .dash_content{
-//             ul{
-//                 border-radius: 3px;
-//                 overflow: hidden;
-//                 list-style: none;
-//                 margin: 0;
-//                 padding: 10px;
-//             }
-//             li{
-//                 border-bottom: 1px solid rgba(255,255,255,0.4);
-//                 margin-top: 10px;
-//                 margin-bottom: 10px;
-//                 padding: 10px;
-//             .fa{
-//                 margin-right: 10px;
-//                 color: #fff;
-//              }}
-//         }
-//          }
-//          .head{
-//             .headernew{
-//                 background: #fff;
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        color: #fff;
+        overflow-y: scroll;
+        .dash{
+            padding: 14px;
+            img{
+                width: 100%;
+                padding: 16px 16px 0 16px;
+            }
+        }
+        .dash_content{
+            ul{
+                border-radius: 3px;
+                overflow: hidden;
+                list-style: none;
+                margin: 0;
+                padding: 10px;
+            }
+            li{
+                border-bottom: 1px solid rgba(255,255,255,0.4);
+                margin-top: 10px;
+                margin-bottom: 10px;
+                padding: 10px;
+            .fa{
+                margin-right: 10px;
+                color: #fff;
+             }}
+        }
+         }
+         .head{
+            .headernew{
+                background: #fff;
              
             
-//             color: #000000;
-//             width: 100%;
-//             height: 60px;
+            color: #000000;
+            width: 100%;
+            height: 60px;
              
-//             -moz-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
-//             box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
-//             position: sticky;
-//             top: 0;
-//             padding: 5px 0px;
-//             z-index: 11;
-//             overflow: hidden;
-//             .cont{
-//                 margin-top: 20px;
-//             }
-//             .faa{
+            -moz-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            padding: 5px 0px;
+            z-index: 11;
+            overflow: hidden;
+            .cont{
+                margin-top: 20px;
+            }
+            .faa{
             
-//                             margin-right: 30px;
-//                             float: left;
-//                             margin-top: 3px; 
-//                             margin-left: 30px;
-//             }
-//             }
-//             .white-box{
-//                 background: #fff;
-//                 padding: 20px;
-//                 box-shadow: 0 0 10px #dadada;
-//                 border: 1px solid #e4e6f6;
-//                 border-radius: 0px;
-//                 margin: 0 0 30px 0;
-//                 display: inline-block;
-//                 width: 90%;
-//                 margin-top: 20px;
-//             } 
-//          }
-    
-// }
-
-
-
-
-.headernew { 
-    background: #fff;
-    transition: width 0.25s ease;
-    -webkit-transition: width 0.25s ease;
-    -moz-transition: width 0.25s ease;
-    -ms-transition: width 0.25s ease;
-    color: #000000;
-     width:100%;  
-    height: 60px;
-    -webkit-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 3px 21px 0px rgba(0, 0, 0, 0.1); 
-    position:sticky; top:0; padding:5px 20px; z-index:11; 
-}
-
-// .headernew .closellapsbtn { font-size:22px; background:none; border:0; color:#000; float:left; padding:11px 0 0 0; }
-// .headernew h5 { float:left; padding:15px 0 0 30px; margin:0; font-size:16px; }
-
-#sidebar { 
-    min-width: 250px;   
-    max-width: 250px;  
-    width: 250px; 
-    max-height: 100%;  
-    min-height: 100vh; 
-    overflow-y:scroll; 
-    position:relative; 
-    color: #fff;  
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;  
-    transition: all .3s; 
-    background:#fafafa; 
-    background-image:url(../images/1.jpg); 
-    background-size:cover; 
-    background-repeat:no-repeat;  
-    &.active{
-        margin-left:-250px; 
+                            margin-right: 30px;
+                            float: left;
+                            margin-top: 3px; 
+            }
+            }
+            .white-box{
+                background: #fff;
+                padding: 20px;
+                box-shadow: 0 0 10px #dadada;
+                border: 1px solid #e4e6f6;
+                border-radius: 0px;
+                margin: 0 0 30px 20px;
+                display: inline-block;
+                width: 93%;
+                margin-top: 20px;
+                .cold{
+                    padding-left: 0;
+                }
+            } 
+         }
+    .cold{
+        padding-left: 0;
     }
-}
 
-// .sidetop { padding:30px 30px 0 30px; position:relative; }
-
- 
-#content {  
-    width: 100%;   
-    padding: 0;   
-    min-height: 100vh;   
-    -webkit-transition: all .3s;  
-    -o-transition: all .3s;  
-     transition: all .3s;
-     .main-content {   
-        background:#f4f7fa; 
-        padding:30px; margin:0px 0 0 0; 
-        height: calc(100vh - 60px);  
-        overflow-y: scroll; 
-    }
-}
+        }
 
       
