--- a/registration/src/components/CSS/header.scss
+++ b/registration/src/components/CSS/header.scss
@@ -47,6 +47,7 @@
           display:block; 
           text-transform:capitalize; 
           font-weight:500; 
+          text-decoration: none;
           &:hover {
             color: #444;
           }
