--- a/registration/src/components/CSS/home.scss
+++ b/registration/src/components/CSS/home.scss
@@ -5,6 +5,8 @@
 .slider {
   background-image: url(../images/banner-bg.jpeg);
   background-size: cover;
+  overflow:hidden;
+
   &.slider-in{
     padding: 100px 0;
     text-align: center;
