--- a/registration/src/components/CSS/dashboard.scss
+++ b/registration/src/components/CSS/dashboard.scss
@@ -22,17 +22,23 @@
                 overflow: hidden;
                 list-style: none;
                 margin: 0;
-                padding: 10px;
+                padding: 20px;
+                li{
+                    border-bottom: 1px solid rgba(255,255,255,0.4);
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                    padding: 10px;
+                    .lk{
+                        text-decoration: none;
+                        color: #fff;
+                    }
+                .fa{
+                    margin-right: 10px;
+                    color: #fff;
+                 }
+                }
             }
-            li{
-                border-bottom: 1px solid rgba(255,255,255,0.4);
-                margin-top: 10px;
-                margin-bottom: 10px;
-                padding: 10px;
-            .fa{
-                margin-right: 10px;
-                color: #fff;
-             }}
+           
         }
          }
          .head{
