--- a/registration/src/components/CSS/footer.scss
+++ b/registration/src/components/CSS/footer.scss
@@ -22,6 +22,7 @@
         text-align:center; 
         .button2 { 
             float:right; 
+            
 
         }
     }
@@ -251,24 +252,21 @@
 .contantinfo .button2 {
     float: right;
 }
-.button2:hover {
-    background: #555;
-    color: #ffff;
-}
-.button2 {
-    background: linear-gradient(180deg, #fff 0%, #fafafa 100%);
-    border-radius: 5px;
-    border: 0;
-    line-height: 50px;
-    height: 50px;
-    padding: 0px 40px;
-    color: #000;
-    box-shadow: 0px 0px 20px rgb(0 0 0 / 5%);
-    font-size: 16px;
-    font-weight: normal;
-    display: inline-block;
-    text-decoration: none;
-}
+
+// .button2 {
+//     background: linear-gradient(180deg, #fff 0%, #fafafa 100%);
+//     border-radius: 5px;
+//     border: 0;
+//     line-height: 50px;
+//     height: 50px;
+//     padding: 0px 40px;
+//     color: #000;
+//     box-shadow: 0px 0px 20px rgb(0 0 0 / 5%);
+//     font-size: 16px;
+//     font-weight: normal;
+//     display: inline-block;
+//     text-decoration: none;
+// }
 .footer-social {
     float: left;
 }
