--- a/registration/src/components/CSS/home.scss
+++ b/registration/src/components/CSS/home.scss
@@ -286,13 +286,14 @@
   line-height:45px; 
   height:45px; 
   padding:0px 30px; 
-  color:#0c0202; 
+  color:#fff; 
   box-shadow:0px 0px 20px rgb(0 0 0 / 5%); 
   font-size:15px; 
   font-weight:normal; 
   display:inline-block; 
   border:1px solid #d41919;
   margin-top: 5px ;
+  text-decoration: none;
   &:hover { 
     background:#fff; 
     color:#d41919;
