--- a/registration/src/components/CSS/all.scss
+++ b/registration/src/components/CSS/all.scss
@@ -4,5 +4,10 @@
 @import '../CSS/admin';
 @import '../CSS/dashboard';
 @import '../CSS/manage';
+@import '../CSS/about';
+@import '../CSS/resources';
+@import '../CSS/medical';
+@import '../CSS/services';
+
 
  
